--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -8,14 +8,13 @@
 
 .navbar {
   height: 60px;
-  width: 100%;
   background: white;
   color: var(--colors-text);
   top: 0;
   padding-left: 80%;
   font-weight: bold;
   border-bottom: 1px solid var(--color-gray);
-  z-index: 99;
+  /* z-index: 99; */
 }
 
 .navbar ul {
