--- a/src/pages/login/Login.css
+++ b/src/pages/login/Login.css
@@ -17,6 +17,23 @@
   margin: 0.5rem 1rem 0.5rem 0;
 } */
 
+.login-page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  width: 100vw;
+  background-color: var(--color-background);
+}
+
+.login-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--color-background);
+}
 .loginBtn {
   box-sizing: border-box;
   position: relative;
@@ -93,6 +110,26 @@
   box-shadow: inset 0 0 0 32px rgba(0, 0, 0, 0.1);
 }
 
+/* Github */
+/* .loginBtn-github {
+  background: #3b5998;
+}
+
+.loginBtn-facebook:before {
+  border-right: #3b5998 2px;
+  background: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/14082/icon_facebook.png")
+    6px 6px no-repeat;
+}
+
+.loginBtn-facebook:hover,
+.loginBtn-facebook:focus {
+  background: #3b5998;
+  cursor: pointer;
+}
+
+.loginBtn-facebook:active {
+  box-shadow: inset 0 0 0 32px rgba(0, 0, 0, 0.1);
+} */
 
 @media only screen and (max-width: 768px) {
   button {
